# -CG-2020-I-

./: Readme  Thumbs.db
0.openglStuff/include/glad/: glad.h
1.2.HelloWindow(CambioColor)/: CMakeLists.txt  source.cpp
2.Triangle/: CMakeLists.txt  source.cpp
3.ProyectoNaves(EvaFly)-Avance/: CMakeLists.txt  game.cpp  nave.cpp  naveEnemiga.cpp  source.cpp
3.ProyectoNaves(EvaFly)-Avance/include/: game.h  nave.h  naveEnemiga.h
4.TriangleSierpinski/: CMakeLists.txt  TriangleSierpinski.docx  source.cpp  triangle.cpp
4.TriangleSierpinski/include/: triangle.h
5.TwoTrianglesChangeColor/: CMakeLists.txt  main.cpp
6.1.OperacionesMatrices/: Matrix.cpp  source.cpp
6.2.OperacionesMatrices2/: Comandos.txt  Matrix.cpp  source.cpp
6.2.OperacionesMatrices2/include/: Matrix.h
6.3.OperacionesMatrices3/: Matrix.cpp  source.cpp
6.3.OperacionesMatrices3/include/: Matrix.h
7.0.ExamenParcial/: Thumbs.db
7.0.ExamenParcial/7. ExamenParcialPractico/: CMakeLists.txt  Matrix.cpp  Thumbs.db  source.cpp
7.0.ExamenParcial/7. ExamenParcialPractico/include/: Matrix.h
HelloWindow/: CMakeLists.txt
HelloWindow-/: HelloWindow.sln
HelloWindow-/HelloWindow/: HelloWindow.vcxproj
HelloWindow-/HelloWindow/Debug/: vc140.idb
HelloWindow-/HelloWindow/Debug/HelloWindow.tlog/: CL.command.1.tlog  (+3 more)
HelloWindow-/x64/Debug/: HelloWindow.ilk
HelloWindow/HelloWindow/: HelloWindow.vcxproj  HelloWindow.vcxproj.filters
HelloWindow/HelloWindow/Debug/: vc140.idb
HelloWindow/x64/Debug/: HelloWindow.ilk
Triangle/: CMakeLists.txt  source.cpp
openglStuff/include/glad/: glad.c
(+20 files in other folders)
